Full Drag and Drop working with windows Explorer

--- a/SizeOnDisk/Windows/MainWindow.xaml
+++ b/SizeOnDisk/Windows/MainWindow.xaml
@@ -352,6 +352,8 @@
                         <TreeView BorderThickness="1"
                                       dd:DragDrop.IsDragSource="True"
                                       dd:DragDrop.DragHandler="{Binding}"
+                                      dd:DragDrop.IsDropTarget="True"
+                                      dd:DragDrop.DropHandler="{Binding}"
                                   ItemsSource="{Binding DummyMe}"
                                   ContextMenu="{StaticResource VMContextMenu}"
                                   DisplayMemberPath="Name"
@@ -384,6 +386,8 @@
                             <ListView MinWidth="25"
                                       dd:DragDrop.IsDragSource="True"
                                       dd:DragDrop.DragHandler="{Binding}"
+                                      dd:DragDrop.IsDropTarget="True"
+                                      dd:DragDrop.DropHandler="{Binding}"
                                   ItemsSource="{Binding Childs}"
                                   BorderThickness="1"
                                   SelectedItem="{Binding Root.SelectedItem}"
@@ -427,6 +431,8 @@
                                   cmd:SelectorBehavior.IsBroughtIntoViewWhenSelected="True"
                                       dd:DragDrop.IsDragSource="True"
                                       dd:DragDrop.DragHandler="{Binding}"
+                                      dd:DragDrop.IsDropTarget="True"
+                                      dd:DragDrop.DropHandler="{Binding}"
                                   BorderThickness="1"
                                   SelectedItem="{Binding Root.SelectedItem}"
                                   HeadersVisibility="Column"
