--- a/SizeOnDisk/Windows/MainWindow.xaml
+++ b/SizeOnDisk/Windows/MainWindow.xaml
@@ -28,7 +28,7 @@
                      DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}"
                      ItemsSource="{Binding Details.FileCommands}" />
     </Window.Resources>
-    <DockPanel cmd:CommandBehavior.Context="{Binding SelectedRootFolder.DummyMe}">
+    <DockPanel cmd:CommandBehavior.Context="{Binding SelectedRootFolder}">
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
                 <Button cmd:CommandBehavior.Command="{x:Static vm:VMRootHierarchy.OpenFolderCommand}" Padding="3" />
@@ -355,8 +355,8 @@
                                       dd:DragDrop.IsDropTarget="True"
                                       dd:DragDrop.DropHandler="{Binding}"
                                   ItemsSource="{Binding DummyMe}"
-                                  ContextMenu="{StaticResource VMContextMenu}"
                                   DisplayMemberPath="Name"
+                                      ContextMenu="{StaticResource DefaultCopyMenu}"
                                   cmd:ControlBehavior.FocusMouseRightButtonDown="True">
                             <TreeView.ItemContainerStyle>
                                 <Style TargetType="{x:Type TreeViewItem}">
@@ -366,6 +366,7 @@
                                     <Setter Property="IsSelected" Value="{Binding IsTreeSelected, Mode=TwoWay}" />
                                     <Setter Property="ItemsSource" Value="{Binding Folders}" />
                                     <Setter Property="cmd:CommandBehavior.Context" Value="{Binding}" />
+                                    <Setter Property="ContextMenu" Value="{StaticResource VMContextMenu}"/>
                                     <Setter Property="HeaderTemplate">
                                         <Setter.Value>
                                             <DataTemplate >
@@ -388,16 +389,18 @@
                                       dd:DragDrop.DragHandler="{Binding}"
                                       dd:DragDrop.IsDropTarget="True"
                                       dd:DragDrop.DropHandler="{Binding}"
+                                      dd:DragDrop.SelectDroppedItems="True"
                                   ItemsSource="{Binding Childs}"
                                   BorderThickness="1"
                                   SelectedItem="{Binding Root.SelectedItem}"
                                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                  ContextMenu="{StaticResource VMContextMenu}"
+                                      ContextMenu="{StaticResource DefaultCopyMenu}"
                                   cmd:SelectorBehavior.SyncIsSelectedWhenSelected="IsSelected"
                                   cmd:SelectorBehavior.IsBroughtIntoViewWhenSelected="True"
                                   Panel.ZIndex="{Binding Root.ViewMode, Mode=OneWay, Converter={StaticResource IsEqualConverter}, ConverterParameter={x:Static vm:VMViewMode.Tile}}">
                                 <ListView.Resources>
                                     <Style TargetType="ListViewItem">
+                                        <Setter Property="ContextMenu" Value="{StaticResource VMContextMenu}"/>
                                         <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                         <EventSetter Event="MouseDoubleClick" Handler="Selector_MouseDoubleClick"/>
                                         <Setter Property="cmd:CommandBehavior.Context" Value="{Binding}" />
@@ -433,15 +436,16 @@
                                       dd:DragDrop.DragHandler="{Binding}"
                                       dd:DragDrop.IsDropTarget="True"
                                       dd:DragDrop.DropHandler="{Binding}"
+                                      dd:DragDrop.SelectDroppedItems="True"
                                   BorderThickness="1"
                                   SelectedItem="{Binding Root.SelectedItem}"
                                   HeadersVisibility="Column"
                                   ItemsSource="{Binding Childs}"
                                   AutoGenerateColumns="False"
                                   Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
-                                  ContextMenu="{StaticResource VMContextMenu}"
                                   HorizontalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
                                   VerticalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
+                                      ContextMenu="{StaticResource DefaultCopyMenu}"
                                   ClipboardCopyMode="IncludeHeader"
                                   Panel.ZIndex="{Binding Root.ViewMode, Mode=OneWay, Converter={StaticResource IsEqualConverter}, ConverterParameter={x:Static vm:VMViewMode.Details}}">
                                 <DataGrid.Resources>
@@ -449,6 +453,7 @@
                                         <Setter Property="TextAlignment" Value="Right" />
                                     </Style>
                                     <Style TargetType="DataGridRow">
+                                        <Setter Property="ContextMenu" Value="{StaticResource VMContextMenu}"/>
                                         <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                         <EventSetter Event="MouseDoubleClick" Handler="Selector_MouseDoubleClick"/>
                                         <Setter Property="cmd:CommandBehavior.Context" Value="{Binding}" />
